--- a/_includes/instagram.html
+++ b/_includes/instagram.html
@@ -7,9 +7,6 @@
 				</div>
 			</div>
 		</div>
-		<div class="medium-9 columns">
-			<h2 class="instagramUserInformationFormatting" id="instagramUserDescription"></h2>
-		</div>
 		<div class="medium-1 columns instagramUserSpecsDivFormatting">
 			<h1 class="instagramUserSpecsHeadingFormatting" id="instagramUserPosts"></h1>
 			<div class ="row">
@@ -32,6 +29,11 @@
 				<div class="medium-1 columns">
 					<h2 class="instagramUserSpecsFormatting">following</h5>
 				</div>
+			</div>
+		</div>
+		<div class="row">
+			<div class="medium-9 columns">
+				<h2 class="instagramUserInformationFormatting" id="instagramUserDescription"></h2>
 			</div>
 		</div>
 	</div>
