--- a/_includes/instagram.html
+++ b/_includes/instagram.html
@@ -32,7 +32,7 @@
 			</div>
 		</div>
 		<div class="row">
-			<div class="medium-9 columns">
+			<div class="medium-9 columns instagramQuoteFormatting">
 				<h2 class="instagramUserInformationFormatting" id="instagramUserDescription"></h2>
 			</div>
 		</div>
