--- a/css/aueque.css
+++ b/css/aueque.css
@@ -194,6 +194,10 @@
   margin:1px
 }
 
+.instagramQuoteFormatting{
+  .margin-left: 35px;
+}
+
 /*.instagramUserNavigationFormatting{
   height:;
 }*/
