Instagram followers formatting

--- a/css/aueque.css
+++ b/css/aueque.css
@@ -170,7 +170,8 @@
 .instagramUserSpecsFormatting{
   font-family: Arial;
   color: #A5A7AA;
-  margin: -15px;
+  margin-top: -15px;
+  margin-left: -28px;
 }
 
 .instagramUserSpecsDivFormatting{
