Facebook added to home page

--- a/_includes/home.html
+++ b/_includes/home.html
@@ -1,6 +1,1 @@
-<div class="row">
-	<div class="small-6 small-centered columns"><p class="fontConstructionFormatting">We are currently under construction, please check back later!</p></div>
-</div>
-<div class="row">
-	<div class="small-6 small-centered columns"><img class="logoConstructionImageStyling" src="img/logo.png"/></div>
-</div>
+<div class="fb-page" data-href="https://www.facebook.com/aueque" data-hide-cover="false" data-show-facepile="true" data-show-posts="true"><div class="fb-xfbml-parse-ignore"><blockquote cite="https://www.facebook.com/aueque"><a href="https://www.facebook.com/aueque">AUÉQUE</a></blockquote></div></div>
