--- a/_layouts/twitter.html
+++ b/_layouts/twitter.html
@@ -26,6 +26,7 @@
 <script src="js/jquery.min.js"></script>
 <script src="js/foundation.min.js"></script>
 <script src="js/aueque.js"></script>
+<script src="js/auequeFacebook.js"></script>
 <script src="js/TwitterPostFetcherMin.js"></script>
 <script src="js/instafeed.min.js"></script>
 <script src="http://aueque.tumblr.com/api/read/json"></script>
