--- a/_includes/instagram.html
+++ b/_includes/instagram.html
@@ -7,19 +7,19 @@
 				</div>
 			</div>
 		</div>
-		<div class="medium-1 medium-offset-1 columns instagramUserSpecsDivFormatting">
+		<div class="medium-1 medium-offset-1 columns instagramUserSpecsDivFormatting" align="center">
 			<h1 class="instagramUserSpecsHeadingFormatting" id="instagramUserPosts"></h1>
 			<div class ="row">
 				<h2 class="instagramUserSpecsFormatting">posts</h5>
 			</div>
 		</div>
-		<div class="medium-2 medium-offset-1 columns instagramUserSpecsDivFormatting">
+		<div class="medium-2 medium-offset-1 columns instagramUserSpecsDivFormatting" align="center">
 			<h1 class="instagramUserSpecsHeadingFormatting" id="instagramUserFollowers"></h1>
 			<div class ="row">
 				<h2 class="instagramUserSpecsFormatting">followers</h5>
 			</div>
 		</div>
-		<div class="medium-2 medium-offset-1 columns instagramUserSpecsDivFormatting">
+		<div class="medium-2 medium-offset-1 columns instagramUserSpecsDivFormatting" align="center">
 			<h1 class="instagramUserSpecsHeadingFormatting" id="instagramUserFollowing"></h1>
 			<div class ="row">
 				<h2 class="instagramUserSpecsFormatting">following</h5>
