--- a/_includes/home.html
+++ b/_includes/home.html
@@ -1,1 +1,1 @@
-<div class="fb-page" data-href="https://www.facebook.com/aueque" data-hide-cover="false" data-width="500px" data-show-facepile="true" data-show-posts="true"><div class="fb-xfbml-parse-ignore"><blockquote cite="https://www.facebook.com/aueque"><a href="https://www.facebook.com/aueque">AUÉQUE</a></blockquote></div></div>
+<div class="fb-root"</div>
